fixed issue 71 - overflow-y for menu didn't scroll

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -61,6 +61,8 @@ html, body {
 		#content {
 			padding: 1rem;
 			margin-top: 1.5rem;
+			height: ~'calc(100% - 10rem)';
+			overflow-y: scroll;
 
 			#tool-button-container {
 				display: flex;
